<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_1">"&#128081; "</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="appVersion">"version "</string>
    <string name="app_name">Arkanoid</string>
    <string name="best_score">Best Score</string>
    <string name="buttonGame">PLAY &#127918;</string>
    <string name="creditsOriginal">Developed by Ľudovít Laca</string>
    <string name="creditsRevamped">Revamped by GAMP Team</string>
    <string name="divider">____________________________</string>
    <string name="email">Email</string>
    <string name="gameOver">Game over!</string>
    <string name="level">"Level "</string>
    <string name="music">Music</string>
    <string name="no">No</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="rankings">"RANKINGS &#127942; "</string>
    <string name="scorePoints">%1$d</string>
    <string name="scoreText">%1$s: %2$d</string>
    <string name="shareString">Hey! I just reached %1$d points in Arkanoid! Come play!</string>
    <string name="shareTitle">Share score through:</string>
    <string name="share_your_score">SHARE YOUR SCORE</string>
    <string name="sign_out">Sign out</string>
    <string name="startNewMatch">Do you want to start a new match?</string>
    <string name="switchAccelerometer">Accelerometer</string>
    <string name="switchAccelerometerDescription">Control the Flipper with the Accelerometer</string>
    <string name="switchMusic" >Music</string>
    <string name="switchMusicDescription">Enable or disable music in-app</string>
    <string name="switchSound">Sound</string>
    <string name="switchSoundDescription">Enable or disable sounds in-game</string>
    <string name="switchTouch">Touch</string>
    <string name="switchTouchDescription" >Control the Flipper with Touch input</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="your_best_score">Your best score</string>
</resources>
